Last commit before push to production

--- a/public/assets/css/_fonts.sass
+++ b/public/assets/css/_fonts.sass
@@ -3,3 +3,6 @@
 
 /* Font for the main nav menu */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap')
+
+/* Font for the paragraph */
+@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap')
