--- a/public/assets/css/footer.css
+++ b/public/assets/css/footer.css
@@ -2,6 +2,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Handlee&display=swap");
 /* Font for the main nav menu */
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+/* Font for the paragraph */
+@import url("https://fonts.googleapis.com/css2?family=Nunito&display=swap");
 footer {
   background-color: rgb(19, 18, 18);
   display: flex;
