--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,10 +1,16 @@
+/* Font for the headers */
+@import url("https://fonts.googleapis.com/css2?family=Handlee&display=swap");
+/* Font for the main nav menu */
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+/* Font for the paragraph */
+@import url("https://fonts.googleapis.com/css2?family=Nunito&display=swap");
 body {
   background-color: rgb(39, 36, 36);
-  /*background-image: url('../images/main-background-2.png') */
-  /*background-attachment: fixed */
-  /*background-position: center */
+  background-image: url("../images/main-background-2.png");
+  background-attachment: fixed;
+  background-position: center;
   /*background-repeat: no-repeat */
-  /*background-blend-mode: multiply */
+  background-blend-mode: multiply;
   margin: 0 auto;
   height: 100vh;
   width: 100%;
@@ -17,7 +23,9 @@ h1, h2, h3 {
 }
 
 h1 {
+  color: rgb(187, 58, 7);
   font-size: 2.5rem;
+  text-shadow: 0px 0px 10px rgb(160, 98, 74);
 }
 
 h2 {
@@ -43,5 +51,7 @@ section.home-content {
   height: fit-content;
 }
 section.home-content p {
+  color: rgb(255, 255, 255);
+  font-family: "Nunito", "sans-serif";
   padding: 20px;
 }/*# sourceMappingURL=main.css.map */
