--- a/public/assets/css/main.sass
+++ b/public/assets/css/main.sass
@@ -1,10 +1,12 @@
+@import 'fonts'
+    
 body
     background-color: rgb(39, 36, 36)
-    /*background-image: url('../images/main-background-2.png')
-    /*background-attachment: fixed
-    /*background-position: center
+    background-image: url('../images/main-background-2.png')
+    background-attachment: fixed
+    background-position: center
     /*background-repeat: no-repeat
-    /*background-blend-mode: multiply
+    background-blend-mode: multiply
     margin: 0 auto
     height: 100vh
     width: 100%
@@ -15,7 +17,9 @@ h1, h2, h3
     text-align: center
 
 h1
+    color: rgb(187, 58, 7)
     font-size: 2.5rem
+    text-shadow: 0px 0px 10px rgb(160, 98, 74)
 
 h2
     font-size: 2rem
@@ -36,4 +40,6 @@ section.home-content
     width: max(600px, 60%)
     height: fit-content
     p
+        color: rgb(255, 255, 255)
+        font-family: 'Nunito', 'sans-serif'
         padding: 20px
