--- a/public/assets/css/menu.css
+++ b/public/assets/css/menu.css
@@ -2,13 +2,22 @@
 @import url("https://fonts.googleapis.com/css2?family=Handlee&display=swap");
 /* Font for the main nav menu */
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+/* Font for the paragraph */
+@import url("https://fonts.googleapis.com/css2?family=Nunito&display=swap");
 nav {
   background-color: rgb(19, 18, 18);
   display: flex;
   flex-direction: row;
-  align-content: flex-end;
+  justify-content: space-between;
+  align-items: center;
+  color: rgb(255, 255, 255);
+  font-family: "Open Sans", "sans-serif";
   margin: 0 auto;
   width: 100%;
+}
+nav img {
+  margin: 10px 20px 10px 30px;
+  max-height: 50px;
 }
 nav ul {
   display: flex;
@@ -16,11 +25,27 @@ nav ul {
   gap: 2rem;
 }
 nav ul li {
-  color: rgb(255, 255, 255);
-  font-family: "Open Sans", "sans-serif";
   list-style-type: none;
 }
 nav ul li a {
   text-decoration: none;
   color: inherit;
+}
+nav ul li.menu-item-sep {
+  color: rgb(187, 58, 7);
+  font-weight: bold;
+}
+nav input {
+  background-color: rgb(44, 42, 42);
+  border: none;
+  font-family: inherit;
+  padding: 5px;
+}
+nav div {
+  margin-right: 30px;
+}
+nav div img {
+  cursor: pointer;
+  vertical-align: middle;
+  width: 25px;
 }/*# sourceMappingURL=menu.css.map */
