--- a/public/assets/css/menu.sass
+++ b/public/assets/css/menu.sass
@@ -4,17 +4,35 @@ nav
     background-color: rgb(19, 18, 18)
     display: flex
     flex-direction: row
-    align-content: flex-end
+    justify-content: space-between
+    align-items: center
+    color: rgb(255, 255, 255)
+    font-family: 'Open Sans', 'sans-serif'
     margin: 0 auto
     width: 100%
+    img
+        margin: 10px 20px 10px 30px
+        max-height: 50px
     ul
         display: flex
         flex-direction: row
         gap: 2rem
         li
-            color: rgb(255, 255, 255)
-            font-family: 'Open Sans', 'sans-serif'
             list-style-type: none
             a
                 text-decoration: none
                 color: inherit
+        li.menu-item-sep
+            color: rgb(187, 58, 7)
+            font-weight: bold
+    input
+        background-color: rgb(44, 42, 42)
+        border: none
+        font-family: inherit
+        padding: 5px
+    div
+        margin-right: 30px
+        img
+            cursor: pointer
+            vertical-align: middle
+            width: 25px
